feat: create the filter dash data endpoint but not done with the impl